// Copyright 2016 Google Inc. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

// Monitor Service
//
// The Key Transparency monitor server service consists of APIs to fetch
// monitor results queried using the mutations API.
package monitor.v1.service;

import "github.com/google/keytransparency/core/proto/keytransparency_v1_types/keytransparency_v1_types.proto";
import "google/api/annotations.proto";

// The Monitor Service API allows clients to query the monitors observed and
// validated signed map roots.
//
// - Signed Map Roots can be collected using the GetSignedMapRoot APIs.
// - Monitor resources are named:
//   /v1/map/roots/* /v1/map/roots:latest and v1/map/roots:stream.
//
service MonitorService {
  // GetSignedMapRoot returns the latest valid signed map root the monitor
  // observed.
  //
  // Returns the signed map root for the latest epoch the monitor observed. If
  // the monitor could not reconstruct the map root given the set of mutations
  // from the previous to the current epoch it won't sign the map root.
  rpc GetSignedMapRoot(keytransparency.v1.types.GetMonitoringRequest)
    returns (keytransparency.v1.types.GetMonitoringResponse) {
    option (google.api.http) = { get: "/v1/map/roots:latest" };
  }
  // TODO(ismail): comments
  rpc GetSignedMapRootByRevision(keytransparency.v1.types.GetMonitoringRequest)
    returns(keytransparency.v1.types.GetMonitoringResponse) {
    option (google.api.http) = { get: "/v1/map/roots/{start}" };
  }

  rpc GetSignedMapRootStream(keytransparency.v1.types.GetMonitoringRequest)
    returns (stream keytransparency.v1.types.GetMonitoringResponse) {
    option (google.api.http) = { get: "/v1/map/roots:stream" };
  }
}


